--- a/.github/workflows/todo.yml
+++ b/.github/workflows/todo.yml
@@ -1,2 +1,20 @@
-- name: TODO to Issue
-  uses: alstr/todo-to-issue-action@v4.6.6
+name: TODO to Issue
+
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+    
+jobs:
+  build:
+
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [12.x, 14.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
+    steps:
+    - uses: alstr/todo-to-issue-action@v4.6.6
