--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "dependencies": {
     "@babel/runtime": "^7.18.3",
     "babel-preset-react-app": "^10.0.1",
-    "email-template-object": "^0.2.0"
-  }  
+    "email-template-object": "^0.2.0",
+    "nmtg-template-mailerlite-miscellaneous": "^0.4.0"
+  }
 }
