--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@babel/runtime": "^7.18.3",
     "babel-preset-react-app": "^10.0.1",
     "email-template-object": "^0.2.0",
+    "nmtg-template-mailerlite-inner": "^0.3.0",
     "nmtg-template-mailerlite-miscellaneous": "^0.5.0",
     "nmtg-template-mailerlite-outertemplate": "^0.2.0"
   }
