--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "npm run clean && npm run bundle",
     "build:babel": "babel src -d dist",
     "prepublish": "npm run clean && npm run build",
-    "test": "jest ./tests --passWithNoTests",
+    "test": "jest ./tests/index.test.js --passWithNoTests",
+    "test:write": "jest ./tests/write.test.js --passWithNoTests",
     "clean": "shx rm -rf ./coverage && shx rm -rf ./dist",
     "lint:prettier": "prettier --write src/",
     "lint": "eslint --ext .js . --ignore-path ./.eslintignore --resolve-plugins-relative-to .",
