--- a/sub-modules/typography/package.json
+++ b/sub-modules/typography/package.json
@@ -29,6 +29,7 @@
     "@rollup/plugin-node-resolve": "13.3.0",
     "eslint": "8.19.0",
     "eslint-plugin-json": "3.1.0",
+    "jest": "^28.1.3",
     "prettier": "2.7.1",
     "rollup": "2.77.2",
     "rollup-plugin-includepaths": "0.2.4",
@@ -44,5 +45,9 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "create-html-element": "^4.0.1",
+    "stringify-attributes": "^3.0.0"
   }
 }
