--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prepublish": "npm run clean && npm run build",
     "test": "jest ./tests/index.test.js --passWithNoTests",
     "test:write": "jest ./tests/write.test.js --passWithNoTests",
+    "test:typo": "jest ./tests/typography.test.js --passWithNoTests",
     "clean": "shx rm -rf ./coverage && shx rm -rf ./dist",
     "lint:prettier": "prettier --write src/",
     "lint": "eslint --ext .js . --ignore-path ./.eslintignore --resolve-plugins-relative-to .",
