--- a/sub-modules/typography/package.json
+++ b/sub-modules/typography/package.json
@@ -23,10 +23,12 @@
     "@babel/core": "7.18.9",
     "@babel/eslint-parser": "7.18.9",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
+    "@babel/plugin-transform-modules-commonjs": "^7.18.6",
     "@babel/preset-env": "7.18.9",
     "@rollup/plugin-babel": "5.3.1",
     "@rollup/plugin-commonjs": "22.0.1",
     "@rollup/plugin-node-resolve": "13.3.0",
+    "babel-preset-react-app": "^10.0.1",
     "eslint": "8.19.0",
     "eslint-plugin-json": "3.1.0",
     "jest": "28.1.3",
