--- a/sub-modules/innerTemplate/package.json
+++ b/sub-modules/innerTemplate/package.json
@@ -44,5 +44,8 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "nmtg-template-mailerlite-typography": "^0.5.0"
   }
 }
