--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "eslint": "8.21.0",
     "eslint-plugin-json": "3.1.0",
     "jest": "28.1.2",
-    "markup-generator": "1.2.0",
+    "markup-generator": "^1.3.0",
     "prettier": "2.7.1",
     "rollup": "2.77.2",
     "rollup-plugin-includepaths": "0.2.4",
@@ -60,7 +60,7 @@
     "email-template-object": "^0.2.0",
     "nmtg-template-mailerlite-inner": "^1.0.0",
     "nmtg-template-mailerlite-miscellaneous": "^0.7.0",
-    "nmtg-template-mailerlite-outertemplate": "^1.0.0",
+    "nmtg-template-mailerlite-outertemplate": "^1.1.0",
     "nmtg-template-mailerlite-typography": "^1.0.0"
   }
 }
