--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "module": "dist/index.es.js",
   "browser": "dist/index.iife.js",
   "scripts": {
-    "bundle": "rollup -c --bundleConfigAsCjs",
+    "bundle": "rollup -c",
     "dev": "rollup -c -w --bundleConfigAsCjs",
     "build": "npm run clean && npm run bundle",
     "build:babel": "babel src -d dist",
