--- a/sub-modules/outerTemplate/package.json
+++ b/sub-modules/outerTemplate/package.json
@@ -46,7 +46,8 @@
   "publishConfig": {
     "access": "public"
   },
-  "dependencies": {
+  "dependencies": {    
+    "semver": ">=4.3.2",     
     "nmtg-template-mailerlite-typography": "^3.0.0"
   }
 }
