--- a/sub-modules/typography/package.json
+++ b/sub-modules/typography/package.json
@@ -48,6 +48,7 @@
     "access": "public"
   },
   "dependencies": {
+    "semver": ">=4.3.2",
     "create-html-element": "^4.0.1",
     "stringify-attributes": "^3.0.0"
   }
