--- a/sub-modules/miscellaneous/package.json
+++ b/sub-modules/miscellaneous/package.json
@@ -42,6 +42,10 @@
   "release": {
     "publishDir": "dist"
   },
+  "dependencies": {
+    "semver": ">=4.3.2",
+    "nmtg-template-mailerlite-typography": "^3.0.0"
+  },
   "publishConfig": {
     "access": "public"
   }
