--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "browser": "dist/index.iife.js",
   "scripts": {
     "bundle": "rollup -c",
-    "dev": "rollup -c -w --bundleConfigAsCjs",
+    "dev": "rollup -c -w",
     "build": "npm run clean && npm run bundle",
     "build:babel": "babel src -d dist",
     "prepublish": "npm run clean && npm run build",
