--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:babel": "babel src -d dist",
     "prepublish": "npm run clean && npm run build",
     "test:all": "jest ./tests/* --passWithNoTests",
-    "test:write": "jest ./tests/write.test.js --passWithNoTests",
+    "test:content": "jest ./tests/03_content.test.js --passWithNoTests",
     "test:typo": "jest ./tests/typography.test.js --passWithNoTests",
     "clean": "shx rm -rf ./coverage && shx rm -rf ./dist",
     "lint:prettier": "prettier --write src/",
