--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "test:all": "jest ./tests/* --passWithNoTests",
     "test:content": "jest ./tests/03_content.test.js --passWithNoTests",
     "test:recipes": "jest ./tests/03_recipes.test.js --passWithNoTests",
-    "test:typo": "jest ./tests/typography.test.js --passWithNoTests",
+    "test:typo": "shx chmod +x ./bash/05-test-typography.sh && ./bash/05-test-typography.sh",
     "clean": "shx rm -rf ./coverage && shx rm -rf ./dist",
     "lint:prettier": "prettier --write src/",
-    "upd": "yarn add nmtg-template-mailerlite-inner nmtg-template-mailerlite-miscellaneous nmtg-template-mailerlite-outertemplate nmtg-template-mailerlite-typography",
+    "upd2": "shx chmod +x ./bash/update-packages.sh && ./bash/update-packages.sh",
     "lint": "eslint --ext .js . --ignore-path ./.eslintignore --resolve-plugins-relative-to .",
     "lint:fix": "eslint --fix . --ignore-path ./.eslintignore --resolve-plugins-relative-to .",
     "lint2:fix": "eslint --fix . --ignore-path ./.eslintignore --resolve-plugins-relative-to ."
