playing with scripts

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "test:content": "jest ./tests/03_content.test.js --passWithNoTests",
     "test:recipes": "jest ./tests/03_recipes.test.js --passWithNoTests",
     "test:typo": "shx chmod +x ./bash/05-test-typography.sh && ./bash/05-test-typography.sh",
+    "test:new": "shx chmod +x ./bash/tests.sh && ./bash/tests.sh",
     "clean": "shx rm -rf ./coverage && shx rm -rf ./dist",
+    "chmoder": "shx chmod -R 755 ./bash",
     "lint:prettier": "prettier --write src/",
     "upd2": "shx chmod +x ./bash/update-packages.sh && ./bash/update-packages.sh",
     "lint": "eslint --ext .js . --ignore-path ./.eslintignore --resolve-plugins-relative-to .",
