--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
     "build:babel": "babel src -d dist",
     "prepublish": "npm run clean && npm run build",
     "test:all": "jest ./tests/* --passWithNoTests",
-    "test:content": "jest ./tests/03_content.test.js --passWithNoTests",
-    "test:recipes": "jest ./tests/03_recipes.test.js --passWithNoTests",
-    "test:typo": "shx chmod +x ./bash/05-test-typography.sh && ./bash/05-test-typography.sh",
-    "test:new": "shx chmod +x ./bash/tests.sh && ./bash/tests.sh",
+    "test:content": "bash ./bash/tests.sh 03_content",
+    "test:recipes": "bash ./bash/tests.sh 03_recipes",
+    "test:typo": "npm run chmodler && ./bash/05-test-typography.sh",
+    "test:new": "npm run chmodler && ./bash/tests.sh",
     "clean": "shx rm -rf ./coverage && shx rm -rf ./dist",
-    "chmoder": "shx chmod -R 755 ./bash",
+    "chmodler": "shx chmod -R 755 ./bash",
     "lint:prettier": "prettier --write src/",
-    "upd2": "shx chmod +x ./bash/update-packages.sh && ./bash/update-packages.sh",
+    "upd": "shx chmod +x ./bash/update-packages.sh && ./bash/update-packages.sh",
     "lint": "eslint --ext .js . --ignore-path ./.eslintignore --resolve-plugins-relative-to .",
-    "lint:fix": "eslint --fix . --ignore-path ./.eslintignore --resolve-plugins-relative-to .",
+    "lint:fix": "shx chmod +x ./bash/lint-fix.sh && ./bash/lint-fix.sh",
     "lint2:fix": "eslint --fix . --ignore-path ./.eslintignore --resolve-plugins-relative-to ."
   },
   "devDependencies": {
