--- a/sub-modules/outerTemplate/package.json
+++ b/sub-modules/outerTemplate/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nmtg-template-mailerlite-outertemplate",
-  "version": "2.6.0",
+  "version": "2.7.0",
   "description": "im trying to separate part of our code",
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
@@ -47,7 +47,7 @@
     "access": "public"
   },
   "dependencies": {
-    "semver": ">=4.3.2",
-    "nmtg-template-mailerlite-typography": "^3.0.0"
+    "nmtg-template-mailerlite-typography": "^3.10.0",
+    "semver": ">=4.3.2"
   }
 }
