--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "eslint": "8.30.0",
     "eslint-plugin-json": "3.1.0",
     "jest": "29.3.1",
-    "markup-generator": "1.7.0",
+    "markup-generator": "1.3.0",
     "prettier": "2.8.1",
     "rollup": "3.7.5",
     "rollup-plugin-includepaths": "0.2.4",
@@ -61,9 +61,8 @@
     "@babel/runtime": "^7.18.3",
     "babel-preset-react-app": "^10.0.1",
     "email-template-object": "^0.2.0",
-    "nmtg-template-mailerlite-inner": "^2.13.0",
-    "nmtg-template-mailerlite-outertemplate": "^2.11.0",
-    "nmtg-template-mailerlite-typography": "^3.10.0",
-    "ow": "^1.1.0"
+    "nmtg-template-mailerlite-inner": "^2.14.0",
+    "nmtg-template-mailerlite-outertemplate": "^2.12.0",
+    "nmtg-template-mailerlite-typography": "^3.10.0"
   }
 }
