--- a/sub-modules/innerTemplate/package.json
+++ b/sub-modules/innerTemplate/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nmtg-template-mailerlite-inner",
-  "version": "4.1.0",
+  "version": "5.0.0",
   "description": "im trying to separate part of our code",
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
@@ -47,6 +47,7 @@
     "access": "public"
   },
   "dependencies": {
+    "html-typography-tags": "^2.2.0",
     "nmtg-template-mailerlite-typography": "^3.8.0",
     "semver": ">=4.3.2"
   }
