--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
     "@babel/core": "7.20.7",
     "@babel/eslint-parser": "7.19.1",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
+    "@babel/plugin-transform-modules-commonjs": "^7.20.11",
     "@babel/plugin-transform-runtime": "7.19.6",
     "@babel/preset-env": "7.20.2",
+    "@babel/runtime": "^7.18.3",
     "@rollup/plugin-babel": "6.0.3",
     "@rollup/plugin-commonjs": "24.0.0",
     "@rollup/plugin-node-resolve": "15.0.1",
+    "babel-jest": "^29.3.1",
     "eslint": "8.30.0",
     "eslint-plugin-json": "3.1.0",
     "jest": "29.3.1",
@@ -58,12 +61,10 @@
     "fsevents": "*"
   },
   "dependencies": {
-    "@babel/runtime": "^7.18.3",
-    "babel-preset-react-app": "^10.0.1",
     "email-template-object": "^0.2.0",
     "html-typography-tags": "^0.2.0",
-    "nmtg-template-mailerlite-inner": "^5.0.0",
+    "nmtg-template-mailerlite-inner": "^5.2.0",
     "nmtg-template-mailerlite-outertemplate": "^2.12.0",
-    "nmtg-template-mailerlite-typography": "^4.0.0"
+    "nmtg-template-mailerlite-typography": "^4.1.0"
   }
 }
