--- a/sub-modules/typography/package.json
+++ b/sub-modules/typography/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nmtg-template-mailerlite-typography",
-  "version": "4.0.0",
+  "version": "4.1.0",
   "description": "im trying to separate part of our code",
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
@@ -23,6 +23,7 @@
     "@babel/core": "7.20.7",
     "@babel/eslint-parser": "7.19.1",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
+    "@babel/plugin-transform-modules-commonjs": "^7.20.11",
     "@babel/preset-env": "7.20.2",
     "@rollup/plugin-babel": "6.0.3",
     "@rollup/plugin-commonjs": "24.0.0",
