--- a/nomoretogo/packages/x typography-shared/package.json
+++ b/nomoretogo/packages/x typography-shared/package.json
@@ -4,8 +4,7 @@
   "main": "dist/index.js",
   "scripts": {
     "prepublish": "tsc",
-    "build": "npx tsc",
-    "build:babel": "babel src -d dist",
+    "build": "tsc ./src/index.ts --outDir dist",
     "test": "jest"
   },
   "keywords": [],
