--- a/nomoretogo/packages/typo/package.json
+++ b/nomoretogo/packages/typo/package.json
@@ -4,6 +4,6 @@
     "main": "dist/index.js",
     "devDependencies": {},
     "scripts": {
-      "build": "tsc index.ts --outDir dist"
+      "build": "tsc src/index.ts --outDir dist"
     }
   }
