--- a/nomoretogo/packages/typo/package.json
+++ b/nomoretogo/packages/typo/package.json
@@ -1,9 +1,12 @@
 {
-    "name": "typo",
-    "version": "0.0.0",
-    "main": "dist/index.js",
-    "devDependencies": {},
-    "scripts": {
-      "build": "tsc src/index.ts --outDir dist"
-    }
+  "name": "typo",
+  "version": "0.0.0",
+  "main": "dist/index.js",
+  "devDependencies": {},
+  "scripts": {
+    "build": "tsc src/index.ts --outDir dist"
+  },
+  "dependencies": {
+    "stringify-attributes": "^3.0.0"
   }
+}
