--- a/nomoretogo/package.json
+++ b/nomoretogo/package.json
@@ -5,11 +5,16 @@
   "scripts": {},
   "private": true,
   "devDependencies": {
+    "eslint": "^8.31.0",
     "nx": "15.4.2",
     "prettier": "^2.6.2",
     "typescript": "^4.9.4"
   },
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/parser": "^5.48.0"
+  }
 }
