--- a/nomoretogo/packages/05-nmtg-typo/package.json
+++ b/nomoretogo/packages/05-nmtg-typo/package.json
@@ -1,12 +1,13 @@
 {
-    "name": "nmtg-typo",
-    "version": "0.0.0",
-    "main": "dist/index.js",
-    "devDependencies": {},
-    "scripts": {
-      "build": "tsc src/index.ts --outDir dist"
-    },
-    "dependencies": {
-      "typo": "*"
-    }
+  "name": "nmtg-typo",
+  "version": "0.0.0",
+  "main": "dist/index.js",
+  "devDependencies": {},
+  "scripts": {
+    "build": "tsc src/index.ts --outDir dist"
+  },
+  "dependencies": {
+    "stringify-attributes": "^3.0.0",
+    "typo": "*"
   }
+}
