--- a/nomoretogo/packages/typo/package.json
+++ b/nomoretogo/packages/typo/package.json
@@ -4,7 +4,8 @@
   "main": "dist/index.js",
   "devDependencies": {},
   "scripts": {
-    "build": "tsc src/index.ts --outDir dist"
+    "build": "tsc src/index.ts --outDir dist",
+    "lint": ""
   },
   "dependencies": {
     "stringify-attributes": "^3.0.0"
