--- a/nomoretogo/packages/typo/package.json
+++ b/nomoretogo/packages/typo/package.json
@@ -5,7 +5,7 @@
   "devDependencies": {},
   "scripts": {
     "build": "tsc src/index.ts --outDir dist",
-    "lint": ""
+    "lint": "eslint ."
   },
   "dependencies": {
     "stringify-attributes": "^3.0.0"
