--- a/nomoretogo/packages/inner/package.json
+++ b/nomoretogo/packages/inner/package.json
@@ -4,6 +4,8 @@
     "main": "dist/index.js",
     "devDependencies": {},
     "scripts": {
-      "build": "tsc src/index.ts --outDir dist"
+      "build": "tsc src/index.ts --outDir dist",
+      "lint": "eslint . --ext .ts",
+      "lint:fix": "eslint  . --fix --ext .ts"
     }
   }
