--- a/nomoretogo/package.json
+++ b/nomoretogo/package.json
@@ -2,12 +2,16 @@
   "name": "nomoretogo",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "b": "npm run chmodler && ./bash/build.sh",
+    "chmodler": "shx chmod -R 755 ./bash"
+  },
   "private": true,
   "devDependencies": {
     "eslint": "^8.31.0",
     "nx": "15.4.2",
     "prettier": "^2.6.2",
+    "shx": "^0.3.4",
     "typescript": "^4.9.4"
   },
   "workspaces": [
