--- a/nomoretogo/packages/inner/package.json
+++ b/nomoretogo/packages/inner/package.json
@@ -1,11 +1,15 @@
 {
     "name": "innerTemplate",
-    "version": "0.0.0",
+    "version": "1.0.0",
     "main": "dist/index.js",
     "devDependencies": {},
     "scripts": {
       "build": "tsc src/index.ts --outDir dist",
       "lint": "eslint . --ext .ts",
       "lint:fix": "eslint  . --fix --ext .ts"
+    },
+    "dependencies": {
+      "typo": "*",
+      "nmtg-typo": "*"
     }
   }
