--- a/nomoretogo/packages/05-nmtg-typo/package.json
+++ b/nomoretogo/packages/05-nmtg-typo/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc src/index.ts --outDir dist",
     "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint  . --fix --ext .ts"
+    "lint:fix": "eslint  . --fix --ext .ts",
+    "test": "jest"
   },
   "dependencies": {
     "stringify-attributes": "^3.0.0",
