--- a/nomoretogo/package.json
+++ b/nomoretogo/package.json
@@ -8,10 +8,13 @@
   },
   "private": true,
   "devDependencies": {
+    "@types/jest": "^29.2.5",
     "eslint": "^8.31.0",
+    "jest": "^29.3.1",
     "nx": "15.4.2",
     "prettier": "^2.6.2",
     "shx": "^0.3.4",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.9.4"
   },
   "workspaces": [
