--- a/nomoretogo/package.json
+++ b/nomoretogo/package.json
@@ -4,17 +4,20 @@
   "license": "MIT",
   "scripts": {
     "b": "npm run chmodler && ./bash/build.sh",
+    "b2": "npx nx run-many --target=build",
     "chmodler": "shx chmod -R 755 ./bash"
   },
   "private": true,
   "devDependencies": {
     "@types/jest": "^29.2.5",
+    "@types/node": "^18.11.18",
     "eslint": "^8.31.0",
     "jest": "^29.3.1",
     "nx": "15.4.2",
     "prettier": "^2.6.2",
     "shx": "^0.3.4",
     "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "workspaces": [
