--- a/nomoretogo/packages/write/package.json
+++ b/nomoretogo/packages/write/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "typo",
-  "version": "4.0.0",
+  "name": "write",
+  "version": "1.0.0",
   "main": "dist/index.js",
   "devDependencies": {},
   "scripts": {
     "build": "tsc src/index.ts --outDir dist",
     "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint  . --fix --ext .ts",
-    "try": "npx ts-node --esm src/index.ts"
+    "lint:fix": "eslint  . --fix --ext .ts"
   },
   "dependencies": {
     "stringify-attributes": "^3.0.0"
