--- a/nomoretogo/packages/outer/package.json
+++ b/nomoretogo/packages/outer/package.json
@@ -9,7 +9,8 @@
     "lint:fix": "eslint  . --fix --ext .ts"
   },
   "dependencies": {
-      "typo": "*",
-      "nmtg-typo": "*"
+    "nmtg-typo": "*",
+    "ow": "^1.1.1",
+    "typo": "*"
   }
 }
