building nmtg typo

--- a/template/packages/html-typography-tags/package.json
+++ b/template/packages/html-typography-tags/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "html-typography-tags",
+  "name": "@template/html-typography-tags",
   "version": "0.0.1",
   "type": "commonjs",
   "dependencies": {
