--- a/template/packages/outer/package.json
+++ b/template/packages/outer/package.json
@@ -1,5 +1,10 @@
 {
   "name": "@template/outer",
   "version": "0.0.1",
-  "type": "commonjs"
+  "type": "commonjs",
+  "dependencies": {
+    "ow": "^1.1.1",
+    "@template/html-typography-tags": "*",
+    "@template/nmtg-typo": "*"
+  }
 }
