--- a/template/packages/write/package.json
+++ b/template/packages/write/package.json
@@ -4,6 +4,7 @@
   "type": "commonjs",
   "dependencies": {
     "@template/display": "*",
-    "stringify-attributes": "^3.0.0"
+    "stringify-attributes": "^3.0.0",
+    "write":"*"
   }
 }
