--- a/template/packages/inner/package.json
+++ b/template/packages/inner/package.json
@@ -2,8 +2,8 @@
   "name": "@template/inner",
   "version": "2.0.1",
   "type": "commonjs",
-    "dependencies": {
-      "html-typography-tags": "*",
-      "nmtg-template-mailerlite-typography": "*"
-    }
+  "dependencies": {
+    "html-typography-tags": "^4.1.0",
+    "nmtg-template-mailerlite-typography": "*"
+  }
 }
