--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,6 +3,6 @@
 # and commit this file to your remote git repository to share the goodness with others.
 
 tasks:
-  - init: cd template && npm install && npm run build
-    command: npm run dev
+  - init: cd template
+    command: npm install && npm run build && npm run dev
 
