publishing layout weekly package

--- a/template/packages/inner/package.json
+++ b/template/packages/inner/package.json
@@ -4,6 +4,7 @@
   "type": "commonjs",
   "dependencies": {
     "html-typography-tags": "^4.1.0",
-    "nmtg-template-mailerlite-typography": "*"
+    "nmtg-template-mailerlite-typography": "*",
+    "layout-weekly": "*"
   }
 }
