--- a/template/packages/outer/package.json
+++ b/template/packages/outer/package.json
@@ -1,10 +1,18 @@
 {
-  "name": "@template/outer",
+  "name": "nmtg-template-mailerlite-outertemplate",
   "version": "0.0.1",
   "type": "commonjs",
   "dependencies": {
     "html-typography-tags": "*",
     "nmtg-template-mailerlite-typography": "*",
     "ow": "^1.1.1"
+  },
+  "license": "MIT",
+  "private": false,
+  "release": {
+    "publishDir": "dist"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
