--- a/template/packages/display/package.json
+++ b/template/packages/display/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@template/display",
+  "name": "nmtg-template-display",
   "version": "2.0.1",
   "type": "commonjs",
   "dependencies": {
     "nmtg-template-layout-weekly": "^1.0.0",
     "nmtg-template-mailerlite-inner": "^7.0.0",
-    "nmtg-template-mailerlite-outertemplate": "^5.1.0"
+    "nmtg-template-mailerlite-outertemplate": "^6.0.0"
   }
 }
