--- a/template/package.json
+++ b/template/package.json
@@ -1,8 +1,13 @@
 {
   "name": "template",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "b": "npm run chmodler && ./bash/build.sh",
+    "b2": "npx nx run-many --target=build",
+    "chmodler": "shx chmod -R 755 ./bash",
+    "lint:fix": "./bash/lint-fix.sh"
+  },
   "private": true,
   "dependencies": {
     "tslib": "^2.3.0"
