--- a/template/packages/nmtg-typo/package.json
+++ b/template/packages/nmtg-typo/package.json
@@ -1,9 +1,9 @@
 {
   "name": "nmtg-template-mailerlite-typography",
-  "version": "5.0.1",
+  "version": "6.0.1",
   "type": "commonjs",
   "dependencies": {
-    "stringify-attributes": "^3.0.0",
-    "html-typography-tags": "*"
+    "html-typography-tags": "^4.1.0",
+    "stringify-attributes": "^3.0.0"
   }
 }
