--- a/template/packages/layout-weekly/package.json
+++ b/template/packages/layout-weekly/package.json
@@ -1,9 +1,9 @@
 {
   "name": "nmtg-template-layout-weekly",
-  "version": ".0.1",
+  "version": "1.1.1",
   "type": "commonjs",
   "dependencies": {
-    "html-typography-tags": "^4.1.0",
+    "html-typography-tags": "^5.0.0",
     "nmtg-template-mailerlite-typography": "^7.0.0"
   },
   "license": "MIT",
