--- a/template/packages/outer/package.json
+++ b/template/packages/outer/package.json
@@ -1,9 +1,9 @@
 {
   "name": "nmtg-template-mailerlite-outertemplate",
-  "version": "5.0.1",
+  "version": "7.1.1",
   "type": "commonjs",
   "dependencies": {
-    "html-typography-tags": "*",
+    "html-typography-tags": "^5.0.0",
     "nmtg-template-mailerlite-typography": "^7.0.0",
     "ow": "^1.1.1"
   },
