--- a/template/packages/write/package.json
+++ b/template/packages/write/package.json
@@ -4,8 +4,7 @@
   "type": "commonjs",
   "dependencies": {
     "markup-generator": "^2.5.0",
-    "nmtg-template-display": "^2.6.0",
-    "stringify-attributes": "^3.0.0"
+    "nmtg-template-display": "^3.0.0"
   },
   "license": "MIT",
   "private": false,
