--- a/template/package.json
+++ b/template/package.json
@@ -10,27 +10,39 @@
   },
   "private": true,
   "dependencies": {
+    "axios": "^1.0.0",
+    "html-typography-tags": "^5.0.0",
+    "markup-generator": "^2.5.0",
+    "nmtg-template-display": "^3.0.0",
+    "nmtg-template-layout-weekly": "^1.1.0",
+    "nmtg-template-mailerlite-inner": "^7.6.0",
+    "nmtg-template-mailerlite-outertemplate": "^7.0.0",
+    "nmtg-template-mailerlite-typography": "^7.0.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@nrwl/esbuild": "15.8.6",
     "@nrwl/eslint-plugin-nx": "15.7.2",
-    "@nrwl/jest": "15.7.2",
-    "@nrwl/js": "15.7.2",
+    "@nrwl/jest": "15.8.6",
+    "@nrwl/js": "15.8.6",
     "@nrwl/linter": "15.7.2",
+    "@nrwl/node": "^15.8.6",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "15.7.2",
-    "@types/jest": "28.1.1",
-    "@types/node": "16.11.7",
+    "@types/jest": "^29.4.0",
+    "@types/node": "~18.7.1",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "esbuild": "^0.17.5",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
-    "jest": "28.1.1",
+    "jest": "^29.4.1",
     "jest-environment-jsdom": "28.1.1",
+    "jest-environment-node": "^29.4.1",
     "nx": "15.7.2",
     "prettier": "^2.6.2",
-    "ts-jest": "28.0.5",
+    "ts-jest": "^29.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.8.2"
+    "typescript": "~4.9.5"
   }
 }
