--- a/template/package.json
+++ b/template/package.json
@@ -10,7 +10,9 @@
   },
   "private": true,
   "dependencies": {
+    "@types/express": "~4.17.13",
     "axios": "^1.0.0",
+    "express": "~4.18.1",
     "html-typography-tags": "^5.0.0",
     "markup-generator": "^2.5.0",
     "nmtg-template-display": "^3.0.0",
@@ -29,6 +31,7 @@
     "@nrwl/node": "^15.8.6",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "15.7.2",
+    "@types/express": "~4.17.13",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.7.1",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
